attacks/attack1.kyverno-policy-sig.yaml
# Documentation: https://kyverno.io/docs/policy-types/cluster-policy/verify-images/sigstore/
# Also check JMESPath, the json query tool that Kyverno uses https://release-1-8-0.kyverno.io/docs/writing-policies/jmespath/
# Image verification rules: https://kyverno.io/docs/policy-types/cluster-policy/verify-images/
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-sig
spec:
  validationFailureAction: Audit
  webhookTimeoutSeconds: 30
  rules:
    - name: verify-image-signature-keyless
      match:
        any:
        - resources:
            kinds:
              - Deployment
      verifyImages:
      - imageReferences:
        - "registry.gitlab.com/lefosg/excid-cicd-demo-project:*"
        failureAction: Enforce
        attestors:
        - entries:
          - keyless:
              subjectRegExp: ".*@excid.io"
              issuer: "https://staas.excid.io"
              rekor:
                url: https://rekor.sigstore.dev
              ctlog:
                ignoreSCT: true
              roots: |-
                -----BEGIN CERTIFICATE-----
                MIIBWjCCAQygAwIBAgIUFPDS+axV5MHzv+vkHAK2iwmSu4UwBQYDK2VwMCAxDjAM
[...]
                u6iURpe0wRJ8JPkzigk=
                -----END CERTIFICATE-----
